--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@supabase/supabase-js": "^2.56.0",
-    "@types/react-router-dom": "^5.3.3",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
-    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2",
-    "zod": "^4.1.3"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
